live/environments/lab/cluster/ai/azurechatgpt/7-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: azurechatgpt
  # namespace: itsystems-dev
spec:
  ingressClassName: nginx
  rules:
  - host: chatgpt-dev.medimpact.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: azurechatgpt
            port:
              number: 3000
  tls:
  - hosts:
    - chatgpt-dev.medimpact.com
