live/environments/lab/cluster/ai/azurechatgpt/1-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress.azurechatgpt.3000
  # namespace: itsystems-dev
spec:
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            namespace: ingress-nginx 
        podSelector:
          matchLabels:
            app.kubernetes.io/name: ingress-nginx
      ports:
      - port: 3000
        protocol: TCP
  podSelector:
    matchLabels:
      app: azurechatgpt
  policyTypes:
  - Ingress
